--- a/IP Address Utilities Tests/IP Address Utilities Tests.csproj
+++ b/IP Address Utilities Tests/IP Address Utilities Tests.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>IP_Address_Utilities_Tests</RootNamespace>
+    <RootNamespace>IPAddressUtilities.Tests</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
