--- a/IP-Address-Utilities/IP-Address-Utilities.csproj
+++ b/IP-Address-Utilities/IP-Address-Utilities.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>IPAddressUtilities</RootNamespace>
+    <RootNamespace>IP_Address_Utilities</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
